# GCL

./: .gitignore  CMakeLists.txt  Doxyfile  GCL  GCL.pro  README  changelog.txt
Include/: CDatabase.h  Error.h  Functions.h  SQLWriter.h  common.h  config.h  dateTime.h
Include/logger/: FileSink.h  LoggerCore.h  StreamSink.h
Source/: Error.cpp  Functions.cpp  Resource.cpp  SQLWriter.cpp  common.cpp  dateTime.cpp
Source/logger/: FileSink.cpp  LoggerCore.cpp  StreamSink.cpp
include/: Error.h  Functions.h  GCLError.h  Resource.h  SQLWriter.h  any.hpp  bitValue.h  common.h  concepts.hpp  config.h  dateTime.h  error.h  filesystem.h  functionTrace.h  functions.h  resource.h  sqlWriter_typedef.inc  sqlWriter_variables.inc  string.hpp  stringFunctions.h  tempFileManager.h  traits.h  utf.h  utfString.h  utfString.hpp
include/ORM/: ORM.h  column.h  index.h  join.h  table.h
include/alarm/: alarmCore.h  alarmDaily.h  alarmWeekly.h
include/configurationReader/: configurationReader.hpp  readerCore.hpp  readerSections.hpp  readerVanilla.hpp
include/dataParser/: dataDelimited.h  dataLexerXLSX.h  dataParserCore.h  dataParserHTML.h  dataParser_SAPBKG.h  dataTables.h  intelHEX.hpp
include/logger/: FileSink.h  LoggerCore.h  StreamSink.h  TextEditSink.h  defaultLogger.h  fileSink.h  loggerCore.h  loggerManager.h  loggerTypes.h  streamSink.h
include/logger/filters/: baseFilter.h  debugFilter.h
include/logger/queues/: baseQueue.h  defaultQueue.h  queueQueue.h
include/logger/records/: baseRecord.h  debugRecord.h
include/logger/sinks/: baseSink.h  fileSink.h  streamSink.h
include/parsers/: codePoint.h  codePoint.hpp  htmlLexer.h  htmlTokenType.h  languageTokens.h  lexer.h  lexer.hpp  token.h  tokenType.h
include/parsers/DOM/: DOMImplementation.h  DOMNodeAttribute.h  DOMNodeBase.h  DOMNodeComment.h  DOMNodeDocType.h  DOMNodeDocument.h  DOMNodeElement.h  DOMNodeList.hpp  domExceptions.hpp  htmlCollection.hpp
include/parsers/html/: bufferEncoder.hpp  htmlAttributes.h  htmlBuffer.hpp  htmlDocument.h  htmlElement.h  htmlException.h.h  htmlExceptions.h  htmlLanguageTokens.h  htmlLexer.h  htmlLexer.hpp  htmlNodeBase.h  htmlNodeComment.h  htmlNodeDocumentType.h  htmlNodeElement.h  htmlNodeTypes.h  htmlParser.h  htmlRawAttribute.hpp  htmlTokenType.h  htmlTokeniser.h  htmlTokens.h  htmlTypes.h
include/pluginManager/: pluginManager.h
include/utf/: codePoint.hpp  namedCharacters.hpp  utf.h  utfExceptions.hpp  utfString.hpp
source/: Error.cpp  Functions.cpp  Resource.cpp  SQLWriter.cpp  common.cpp  dateTime.cpp  error.cpp  filesystem.cpp  functionTrace.cpp  functions.cpp  resource.cpp  string.cpp  stringFunctions.cpp  tempFileManager.cpp  utf.cpp
source/ORM/: ORM.cpp  column.cpp  index.cpp  join.cpp  table.cpp
source/alarm/: alarmCore.cpp  alarmDaily.cpp  alarmWeekly.cpp
source/dataParser/: dataDelimited.cpp  dataLexerXLSX.cpp  dataParserCore.cpp  dataParserHTML.cpp  dataParser_SAPBKG.cpp  dataTables.cpp
source/logger/: FileSink.cpp  LoggerCore.cpp  StreamSink.cpp  TextEditSink.cpp  defaultLogger.cpp  fileSink.cpp  loggerCore.cpp  loggerManager.cpp  streamSink.cpp
source/logger/filters/: baseFilter.cpp  debugFilter.cpp
source/logger/queues/: baseQueue.cpp  defaultQueue.cpp  queueQueue.cpp
source/logger/records/: baseRecord.cpp  debugRecord.cpp
source/logger/sinks/: baseSink.cpp  fileSink.cpp  streamSink.cpp
source/parsers/: htmlLexer.cpp  lexer.cpp  token.cpp
source/parsers/DOM/: DOMNodeAttribute.cpp  DOMNodeBase.cpp  DOMNodeDocType.cpp  DOMNodeDocument.cpp  DOMNodeElement.cpp
source/parsers/html/: htmlAttributes.cpp  htmlDocument.cpp  htmlElement.cpp  htmlLanguageTokens.cpp  htmlLexer.cpp  htmlNodeBase.cpp  htmlNodeDocumentType.cpp  htmlNodeElement.cpp  htmlParser.cpp  htmlTokenType.cpp  htmlTokeniser.cpp  htmlTokens.cpp
source/pluginManager/: pluginManager.cpp
test/: CMakeLists.txt  main.cpp  test_dateTime.cpp  test_error.cpp  test_filesystem.cpp  test_functions.cpp  test_sqlWriter.cpp  test_string.cpp  test_stringFunctions.cpp  test_utf.cpp
test/parsers/: test_codePoint.cpp  test_htmlLexer.cpp  test_lexer.cpp  test_token.cpp
test/parsers/html/: test_htmlAttributes.cpp  test_htmlBuffer.cpp  test_htmlLexer.cpp  test_htmlParser.cpp  test_htmlTokeniser.cpp  test_htmlTokens.cpp
test/utf/: test_codePoint.cpp  test_utf.cpp  test_utfString.cpp
